# CUTIL

./: README.md  TODO.md
cprintf/: CMakeLists.txt
cprintf/inc/: cprintf.h  cprintf_int.h
cprintf/src/: cprintf.c  cprintf_int.h
cprintf/test/: main.c  main.cpp
matrix/: .gitignore  CMakeLists.txt
matrix/cmake/: nasm-toolchain.cmake
matrix/inc/: complex.hpp  matrix.hpp  matrix_int.hpp  sq_matrix.hpp  types.h
matrix/old/: matrix.cpp  matrix_REF.asm  matrix_RREF.asm  matrix_math.asm  matrix_math.cpp  matrix_row_ops.asm
matrix/src/: matrix.cpp  matrix_REF.asm  matrix_REF.cpp  matrix_RREF.asm  matrix_composition.asm  matrix_math.asm  matrix_math.cpp  matrix_row_ops.asm
matrix/test/: main.cpp
matrix_c/: .gitignore  CMakeLists.txt
matrix_c/inc/: matrix.h
matrix_c/src/: matrix.c
matrix_c/test/: main.c
stdlib/: Makefile
stdlib/test/: main.c
